--- a/css/karton.css
+++ b/css/karton.css
@@ -19,9 +19,13 @@
 
 .conn1{
     padding: 1rem;
-    text-align: center;
+
     
     flex: 1;
+}
+
+.conn1 label{
+  margin-left: 3%;
 }
 .conn2{
     padding: 1rem;
@@ -398,3 +402,18 @@ background-color: white;
     margin: 3rem 1rem;
 }
   
+
+.wd1{
+  display: flex;
+}
+
+.sd1{
+  flex:25;
+  margin-left: 3rem;
+}
+.sd2{
+  flex: 1;
+font-size: 3.5rem;
+
+}
+
